--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     security_opt:
       - no-new-privileges:true
     environment:
-      TZ: "America/Santo_Domingo"
+      - TZ=${TZ}
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -20,10 +20,10 @@ services:
 # Servicio Docker Controller Bot
   docker-controller-bot:
     environment:
-      - TELEGRAM_TOKEN=7357142099:AAH-QoEr1hlAqIFXO1pK2ZNSZ55oClPkSk8
-      - TELEGRAM_ADMIN=1251187129
       - CONTAINER_NAME=DOCKER-BOT
-      - TZ=Europe/Madrid
+      - TELEGRAM_TOKEN=${BOT_TOKEN}
+      - TELEGRAM_ADMIN=${CHAT_ID}
+      - TZ=${TZ}
       - TELEGRAM_THREAD=1
       - CHECK_UPDATES=1
       - CHECK_UPDATE_EVERY_HOURS=24
