--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 TZ=America/Santo_Domingo
 
 # Variables de entorno para Docker Controller Bot
-BOT_TOKEN=7357142099:AAH-QoEr1hlAqIFXO1pK2ZNSZ55oClPkSk8
-CHAT_ID=1251187129
+BOT_TOKEN="Mi Token"
+CHAT_ID="Mi ID"
