--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,22 +41,33 @@ services:
     tty: true
 #---------------------------------------------------------------#
 # Servicio Monitoreo
+version: '3'
+services:
   netdata:
     image: netdata/netdata
-    container_name: NETDATA
+    container_name: NETADATA
     hostname: "NetData"
-    security_opt:
-      - apparmor=unconfined
+    pid: host
+    network_mode: host
+    restart: unless-stopped
     cap_add:
       - SYS_PTRACE
-    environment:
-      - TZ=${TZ}  
+      - SYS_ADMIN
+    security_opt:
+      - apparmor:unconfined
     volumes:
-      - '/etc/os-release:/host/etc/os-release:ro'
-      - '/sys:/host/sys:ro'
-      - '/proc:/host/proc:ro'
-      - '/etc/group:/host/etc/group:ro'
-      - '/etc/passwd:/host/etc/passwd:ro'
-    ports:
-      - '19999:19999/tcp'
-    restart: always  
+      - netdataconfig:/etc/netdata
+      - netdatalib:/var/lib/netdata
+      - netdatacache:/var/cache/netdata
+      - /etc/passwd:/host/etc/passwd:ro
+      - /etc/group:/host/etc/group:ro
+      - /etc/localtime:/etc/localtime:ro
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /etc/os-release:/host/etc/os-release:ro
+      - /var/log:/host/var/log:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+volumes:
+  netdataconfig:
+  netdatalib:
+  netdatacache:
